--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Didact+Gothic&family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Markazi+Text:wght@400;500;600;700&family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
+
+:root {
+    font-family: 'Source Serif Pro', sans-serif;
+    font-size: 21px;
+
+    --main-max-width: 1100px;
+    --border-width: 1px;
+    --border-color: blue;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    border: var(--border-width) solid var(--border-color);
 }
+
+.text-center {
+    text-align: center;
+}
+
+main {
+    width: calc(100vw - 2rem);
+    max-width: var(--main-max-width);
+    margin: auto;
+    background-color: cornflowerblue;
+}
+
+body {
+    background-color: #444444;
+}
+
+.search {
+    background-color: green;
+}
+
+.search input {
+
+}
+
+
+
