--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,20 @@
 
 :root {
     font-family: 'Source Serif Pro', sans-serif;
-    font-size: 21px;
+    font-size: 18px;
 
     --main-max-width: 1100px;
     --border-width: 1px;
-    --border-color: blue;
+    --border-color: black;
+
+
+    --color1: #E3F2FD;
+    --color2: #bbdefb;
+    --color3: #90caf9;
+    --color4: #64b5f6;
+    --color5: #2196f3;
+    --color6: #0d47a1;
+
 }
 
 * {
@@ -20,23 +29,100 @@
     text-align: center;
 }
 
+/* .text {
+    color: white;
+    color: black;
+    text-shadow: -2px -2px rgba(0, 0, 0, 0.5),
+                  1px -1px rgba(0, 0, 0, 0.5),
+                 -1px 1px rgba(0, 0, 0, 0.5),
+                 1px 1px rgba(0, 0, 0, 0.5);
+} */
+
+.text {
+    font-weight: 600;
+}
+
 main {
     width: calc(100vw - 2rem);
     max-width: var(--main-max-width);
+    min-height: 150vh;
     margin: auto;
-    background-color: cornflowerblue;
+    background-color: var(--color4);
 }
 
 body {
-    background-color: #444444;
+    background-color: var(--color2);
 }
 
 .search {
-    background-color: green;
+    display: flex;
+    justify-content: center;
+    width: fit-content;
+    margin: auto;
+    border-radius: 1rem;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
+    /* border: 1px solid black; */
 }
 
 .search input {
+    border-radius: 1rem;
+    padding: 0.5rem 1rem;
+    font-size: 1.5rem;
+    margin-right: -1rem;
+    background-color: rgba(255, 255, 255, 1);
+}
 
+.search input:focus {
+    outline: none;
+}
+
+.search button {
+    border-radius: 1rem;
+    padding: 0.5rem;
+    font-size: 1rem;
+    margin-left: -1rem;
+    transition: 0.3s;
+    z-index: 99;
+    background-color: var(--color6);
+    color: white;
+}
+
+.search button:hover {
+    color: white;
+    background-color: black;
+}
+
+.search button:active {
+    background-color: grey;
+    color: black;
+}
+
+.location-box {
+    font-weight: bold;
+    margin: 5rem auto;
+    font-size: 3rem;
+}
+
+.date-box {
+    font-weight: bold;
+    font-style: italic;
+    font-size: 0.75em;
+}
+
+.temp-box {
+    font-size: 5rem;
+    font-weight: bold;
+    background-color: rgba(255, 255, 255, 0.2);
+    width: fit-content;
+    margin: 5rem auto;
+    padding: 1rem;
+    border-radius: 1rem;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.description-box {
+    font-size: 2rem;
+    font-weight: bold;
 }
 
 
