Added a table showing the times of the 5 next timestampes in the forecast

--- a/src/index.css
+++ b/src/index.css
@@ -139,5 +139,12 @@ nav {
     font-weight: bold;
 }
 
+main td {
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    font-size: 2rem;
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
 
 
