--- a/src/index.css
+++ b/src/index.css
@@ -29,15 +29,6 @@
     text-align: center;
 }
 
-/* .text {
-    color: white;
-    color: black;
-    text-shadow: -2px -2px rgba(0, 0, 0, 0.5),
-                  1px -1px rgba(0, 0, 0, 0.5),
-                 -1px 1px rgba(0, 0, 0, 0.5),
-                 1px 1px rgba(0, 0, 0, 0.5);
-} */
-
 .text {
     font-weight: 600;
 }
@@ -46,8 +37,9 @@ main {
     width: 100vw;
     max-width: var(--main-max-width);
     min-height: 150vh;
-    margin: auto;
+    margin: 0 auto;
     background-color: var(--color4);
+    border-bottom: 2px solid var(--color4);
 }
 
 body {
@@ -57,6 +49,7 @@ body {
 
 .App {
     background-color: var(--color2);
+    height: fit-content;
 }
 
 nav {
@@ -93,7 +86,7 @@ nav {
     padding: 0.5rem;
     font-size: 1rem;
     margin-left: -1rem;
-    transition: 0.3s;
+    transition: background-color 0.3s, color 0.3s, box-shadow 0s;
     z-index: 99;
     background-color: var(--color6);
     color: white;
@@ -106,16 +99,13 @@ nav {
 }
 
 .search button:active {
-    background-color: grey;
-    color: black;
+    box-shadow: 7px 7px rgba(0, 0, 0, 0.5);
 }
 
 .location-box {
     font-weight: bold;
     margin: auto;
     padding-top: 5rem;
-    
-
     font-size: 3rem;
 }
 
