--- a/src/index.css
+++ b/src/index.css
@@ -126,12 +126,13 @@ nav {
 
 .temp-box {
 	display: flex;
+	align-items: center;
 	font-size: 5rem;
 	font-weight: bold;
 	background-color: rgba(255, 255, 255, 0.2);
 	width: fit-content;
 	margin: 5rem auto;
-	padding: 1rem;
+	padding: 0 1rem;
 	border-radius: 1rem;
 	box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
 }
