--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Didact+Gothic&family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Markazi+Text:wght@400;500;600;700&family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
+
+
 :root {
-	font-family: 'Source Serif Pro', sans-serif;
+	font-family: 'Nunito Sans', sans-serif;
 	font-size: 18px;
 
 	--main-max-width: 1100px;
@@ -38,9 +41,6 @@ a {
 	text-align: center;
 }
 
-.text {
-	font-weight: 600;
-}
 
 main {
 	width: 100%;
@@ -90,7 +90,6 @@ nav {
 	padding: 0.5rem 1rem;
 	font-size: 1.5rem;
 	width: 100%;
-	margin-right: -1rem;
 	background-color: rgba(255, 255, 255, 1);
 }
 
@@ -136,9 +135,9 @@ nav {
 }
 
 .date-box {
-	font-weight: bold;
+	font-weight: 300;
 	font-style: italic;
-	font-size: 0.75em;
+	font-size: 0.55em;
 }
 
 .temp-box {
@@ -149,15 +148,16 @@ nav {
 	background-color: rgba(255, 255, 255, 0.2);
 	width: fit-content;
 	margin: 5rem auto;
-	padding: 0 1rem;
+	padding: 2rem;
 	border-radius: 1rem;
 	box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 .description-box {
 	font-size: 2rem;
-	font-weight: bold;
+	font-weight: lighter;
 }
+
 
 main td {
 	border: 5px solid rgba(255, 255, 255, 0.5);
@@ -165,6 +165,7 @@ main td {
 	padding: 1rem;
 	border-radius: 0rem;
 	width: 8rem;
+	font-weight: 300
 }
 
 .icon-cell {
@@ -220,6 +221,11 @@ main td img {
 	.search button:hover {
 		background-color: var(--color6);
 		color: white;
+	}
+
+	main table td {
+		font-size: 1.5rem;
+		width: 6rem;
 	}
 }
 
